--- a/Projekat/PuzzleStorm/Server/App.config
+++ b/Projekat/PuzzleStorm/Server/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=160.99.38.140,14330; User ID=marija; Password=Marija552; initial catalog=db_puzzlestorm; integrated security=false" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="data source=160.99.38.140,14330; User ID=marija; Password=Marija552; initial catalog=db_storm; integrated security=false" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
