--- a/Projekat/PuzzleStorm/Server/Server.csproj
+++ b/Projekat/PuzzleStorm/Server/Server.csproj
@@ -49,28 +49,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\Game.cs" />
-    <Compile Include="Domain\Piece.cs" />
-    <Compile Include="Domain\Player.cs" />
-    <Compile Include="Domain\Puzzle.cs" />
-    <Compile Include="Domain\Room.cs" />
-    <Compile Include="Domain\RoomProperties.cs" />
-    <Compile Include="Domain\User.cs" />
-    <Compile Include="EntityTypeConfigurations\GameConfiguration.cs" />
-    <Compile Include="EntityTypeConfigurations\PieceConfiguration.cs" />
-    <Compile Include="EntityTypeConfigurations\PlayerConfiguration.cs" />
-    <Compile Include="EntityTypeConfigurations\PuzzleConfiguration.cs" />
-    <Compile Include="EntityTypeConfigurations\RoomConfiguration.cs" />
-    <Compile Include="EntityTypeConfigurations\RoomPropertiesConfiguration.cs" />
-    <Compile Include="EntityTypeConfigurations\UserConfiguration.cs" />
+    <Compile Include="Core\Domain\Game.cs" />
+    <Compile Include="Core\IUnitOfWork.cs" />
+    <Compile Include="Core\Domain\Piece.cs" />
+    <Compile Include="Core\Domain\Player.cs" />
+    <Compile Include="Core\Domain\Puzzle.cs" />
+    <Compile Include="Core\Domain\Room.cs" />
+    <Compile Include="Core\Domain\RoomProperties.cs" />
+    <Compile Include="Core\Domain\User.cs" />
+    <Compile Include="Core\Repositories\IGameRepository.cs" />
+    <Compile Include="Core\Repositories\IPieceRepository.cs" />
+    <Compile Include="Core\Repositories\IPlayerRepository.cs" />
+    <Compile Include="Core\Repositories\IPuzzleRepository.cs" />
+    <Compile Include="Core\Repositories\IRepository.cs" />
+    <Compile Include="Core\Repositories\IRoomPropertiesRepository.cs" />
+    <Compile Include="Core\Repositories\IRoomRepository.cs" />
+    <Compile Include="Core\Repositories\IUserRepository.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\GameConfiguration.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\PieceConfiguration.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\PlayerConfiguration.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\PuzzleConfiguration.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\RoomConfiguration.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\RoomPropertiesConfiguration.cs" />
+    <Compile Include="Persistence\EntityTypeConfigurations\UserConfiguration.cs" />
     <Compile Include="Migrations\201801042356231_Complete.cs" />
     <Compile Include="Migrations\201801042356231_Complete.Designer.cs">
       <DependentUpon>201801042356231_Complete.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Persistence\Repositories\GameRepository.cs" />
+    <Compile Include="Persistence\Repositories\PieceRepository.cs" />
+    <Compile Include="Persistence\Repositories\PlayerRepository.cs" />
+    <Compile Include="Persistence\Repositories\PuzzleRepository.cs" />
+    <Compile Include="Persistence\Repositories\Repository.cs" />
+    <Compile Include="Persistence\Repositories\RoomPropertiesRepository.cs" />
+    <Compile Include="Persistence\Repositories\RoomRepository.cs" />
+    <Compile Include="Persistence\Repositories\UserRepository.cs" />
+    <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StormContext.cs" />
+    <Compile Include="Persistence\StormContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -83,5 +101,6 @@
       <DependentUpon>201801042356231_Complete.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
