--- a/Projekat/PuzzleStorm/Server/Server.csproj
+++ b/Projekat/PuzzleStorm/Server/Server.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E62366A-C52F-43C2-9A38-F49705C89166}</ProjectGuid>
+    <ProjectGuid>{31E54061-6F97-4738-B805-3A6622FFCF14}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Server</RootNamespace>
     <AssemblyName>Server</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,59 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Domain\Game.cs" />
-    <Compile Include="Core\IUnitOfWork.cs" />
-    <Compile Include="Core\Domain\Piece.cs" />
-    <Compile Include="Core\Domain\Player.cs" />
-    <Compile Include="Core\Domain\Puzzle.cs" />
-    <Compile Include="Core\Domain\Room.cs" />
-    <Compile Include="Core\Domain\RoomProperties.cs" />
-    <Compile Include="Core\Domain\User.cs" />
-    <Compile Include="Core\Repositories\IGameRepository.cs" />
-    <Compile Include="Core\Repositories\IPieceRepository.cs" />
-    <Compile Include="Core\Repositories\IPlayerRepository.cs" />
-    <Compile Include="Core\Repositories\IPuzzleRepository.cs" />
-    <Compile Include="Core\Repositories\IRepository.cs" />
-    <Compile Include="Core\Repositories\IRoomPropertiesRepository.cs" />
-    <Compile Include="Core\Repositories\IRoomRepository.cs" />
-    <Compile Include="Core\Repositories\IUserRepository.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\GameConfiguration.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\PieceConfiguration.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\PlayerConfiguration.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\PuzzleConfiguration.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\RoomConfiguration.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\RoomPropertiesConfiguration.cs" />
-    <Compile Include="Persistence\EntityTypeConfigurations\UserConfiguration.cs" />
-    <Compile Include="Migrations\201801042356231_Complete.cs" />
-    <Compile Include="Migrations\201801042356231_Complete.Designer.cs">
-      <DependentUpon>201801042356231_Complete.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Persistence\Repositories\GameRepository.cs" />
-    <Compile Include="Persistence\Repositories\PieceRepository.cs" />
-    <Compile Include="Persistence\Repositories\PlayerRepository.cs" />
-    <Compile Include="Persistence\Repositories\PuzzleRepository.cs" />
-    <Compile Include="Persistence\Repositories\Repository.cs" />
-    <Compile Include="Persistence\Repositories\RoomPropertiesRepository.cs" />
-    <Compile Include="Persistence\Repositories\RoomRepository.cs" />
-    <Compile Include="Persistence\Repositories\UserRepository.cs" />
-    <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Persistence\StormContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201801042356231_Complete.resx">
-      <DependentUpon>201801042356231_Complete.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj">
+      <Project>{5e62366a-c52f-43c2-9a38-f49705c89166}</Project>
+      <Name>DataLayer</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
