--- a/Projekat/PuzzleStorm/DataLayer/DataLayer.csproj
+++ b/Projekat/PuzzleStorm/DataLayer/DataLayer.csproj
@@ -96,6 +96,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
