--- a/Projekat/PuzzleStorm/Server/App.config
+++ b/Projekat/PuzzleStorm/Server/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="data source=160.99.38.140,14330; User ID=marija; Password=Marija552; initial catalog=db_storm; integrated security=false" providerName="System.Data.SqlClient" />
+    <add name="RabbitMQConnection" connectionString="amqp://ygunknwy:pAncRrH8Gxk3ULDyy-Wju7NIqdBThwCJ@sheep.rmq.cloudamqp.com/ygunknwy" />
   </connectionStrings>
 </configuration>
