--- a/Projekat/PuzzleStorm/ServerAuth/ServerAuth.csproj
+++ b/Projekat/PuzzleStorm/ServerAuth/ServerAuth.csproj
@@ -63,10 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
     <Compile Include="ServerAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Workers\AbstractWorker\Worker.cs" />
     <Compile Include="Workers\AuthWorker.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +79,10 @@
     <ProjectReference Include="..\DTOLibrary\DTOLibrary.csproj">
       <Project>{495FB5C5-301C-438D-9DDB-6BAA4CE0BEDD}</Project>
       <Name>DTOLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Server\Server.csproj">
+      <Project>{31e54061-6f97-4738-b805-3a6622ffcf14}</Project>
+      <Name>Server</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
