--- a/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
+++ b/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
@@ -33,21 +33,39 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Broadcasts\BroadcastMessage.cs" />
+    <Compile Include="Broadcasts\RoomsStateUpdate.cs" />
+    <Compile Include="Broadcasts\RoomPlayerUpdate.cs" />
     <Compile Include="Enums\OperationStatus.cs" />
+    <Compile Include="Enums\PuzzleDifficulty.cs" />
+    <Compile Include="Enums\RoomPlayerUpdateType.cs" />
+    <Compile Include="Enums\RoomUpdateType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Requests\CreateRoomRequest.cs" />
+    <Compile Include="Requests\DeleteRoomRequest.cs" />
+    <Compile Include="Requests\JoinRoomRequest.cs" />
     <Compile Include="Requests\LoginRequest.cs" />
+    <Compile Include="Requests\PostLoginRequest.cs" />
+    <Compile Include="Requests\PreLoginRequest.cs" />
     <Compile Include="Requests\RegistrationRequest.cs" />
+    <Compile Include="Requests\Request.cs" />
+    <Compile Include="Requests\RoomCurrentStateRequest.cs" />
+    <Compile Include="Responses\CreateRoomResponse.cs" />
+    <Compile Include="Responses\DeleteRoomResponse.cs" />
+    <Compile Include="Responses\JoinRoomResponse.cs" />
     <Compile Include="Responses\LoginResponse.cs" />
     <Compile Include="Responses\RegistrationResponse.cs" />
+    <Compile Include="Responses\Response.cs" />
+    <Compile Include="Responses\RoomCurrentStateResponse.cs" />
+    <Compile Include="SubDTOs\Player.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj">
+      <Project>{5E62366A-C52F-43C2-9A38-F49705C89166}</Project>
+      <Name>DataLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
