--- a/Projekat/PuzzleStorm/Client/packages.config
+++ b/Projekat/PuzzleStorm/Client/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EasyNetQ" version="2.2.0" targetFramework="net461" />
   <package id="Fody" version="2.2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
