--- a/Projekat/PuzzleStorm/Client/packages.config
+++ b/Projekat/PuzzleStorm/Client/packages.config
@@ -9,4 +9,5 @@
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net461" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
